test/compilable/test19882.d
static assert (!is(undefined_id == int));
static assert (!is(int == undefined_id));
