test/fail_compilation/fail62.d

version (Foo)
	int x;

version=Foo;
